--- a/config/logging.conf
+++ b/config/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,tcrdesign
+keys=root,gentcr
 
 [handlers]
 keys=console,logfile
@@ -11,11 +11,11 @@ keys=simple
 level=DEBUG
 handlers=console
 
-[logger_tcrdesign]
+[logger_gentcr]
 level=DEBUG
 propagate=0
 handlers=console,logfile
-qualname=tcrdesign
+qualname=gentcr
 
 [handler_console]
 class=logging.StreamHandler
@@ -27,7 +27,7 @@ args=(sys.stdout,)
 class=logging.FileHandler
 level=DEBUG
 formatter=simple
-args=('tcrdesign.log', 'a')
+args=('gentcr.log', 'a')
 
 [formatter_simple]
 format=%(asctime)s [%(levelname)s]: %(message)s
