Rename project name

--- a/config/logging.conf
+++ b/config/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,gentcr
+keys=root,tcredit
 
 [handlers]
 keys=console,logfile
@@ -11,11 +11,11 @@ keys=simple
 level=DEBUG
 handlers=console
 
-[logger_gentcr]
+[logger_tcredit]
 level=DEBUG
 propagate=0
 handlers=console,logfile
-qualname=gentcr
+qualname=tcredit
 
 [handler_console]
 class=logging.StreamHandler
@@ -27,7 +27,7 @@ args=(sys.stdout,)
 class=logging.FileHandler
 level=DEBUG
 formatter=simple
-args=('gentcr.log', 'a')
+args=('tcredit.log', 'a')
 
 [formatter_simple]
 format=%(asctime)s [%(levelname)s]: %(message)s
