Finished fine-tuning ESM2

--- a/config/logging.conf
+++ b/config/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,tcredit
+keys=root,tcredit,transformers
 
 [handlers]
 keys=console,logfile
@@ -17,6 +17,12 @@ propagate=0
 handlers=console,logfile
 qualname=tcredit
 
+[logger_transformers]
+level=DEBUG
+propagate=0
+handlers=console,logfile
+qualname=transformers
+
 [handler_console]
 class=logging.StreamHandler
 level=DEBUG
@@ -30,5 +36,5 @@ formatter=simple
 args=('tcredit.log', 'a')
 
 [formatter_simple]
-format=%(asctime)s [%(levelname)s]: %(message)s
+format=(%(name)s) %(asctime)s [%(levelname)s]: %(message)s
 datefmt=%Y-%m-%d %H:%M:%S
