--- a/config/logging.conf
+++ b/config/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,tcredit,transformers
+keys=root,gentcr,transformers
 
 [handlers]
 keys=console,logfile
@@ -11,11 +11,11 @@ keys=simple
 level=DEBUG
 handlers=console
 
-[logger_tcredit]
+[logger_gentcr]
 level=DEBUG
 propagate=0
 handlers=console,logfile
-qualname=tcredit
+qualname=gentcr
 
 [logger_transformers]
 level=DEBUG
@@ -33,7 +33,7 @@ args=(sys.stdout,)
 class=logging.FileHandler
 level=DEBUG
 formatter=simple
-args=('tcredit.log', 'a')
+args=('gentcr.log', 'a')
 
 [formatter_simple]
 format=(%(name)s) %(asctime)s [%(levelname)s]: %(message)s
